stl-test/Tests/coordinate/bounds/Negative/test4.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord(3);
}
